--- a/index.html
+++ b/index.html
@@ -7,18 +7,25 @@
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="./styles/styles.css" />
     <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <script
+      src="https://kit.fontawesome.com/b408879b64.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
+    <a href="https://bit.ly/servingvm" target="_blank" class="float">
+      <i class="fa-brands fa-whatsapp"></i>
+    </a>
     <header>
       <div class="container">
         <img class="logo" src="./assets/logo.png" alt="logo empresa" />
         <nav>
-          <a href="#">Sobre Nosotros</a>
-          <a href="#">Servicios</a>
-          <a href="#">Contacto</a>
+          <a href="#sobre-nosotros">Sobre Nosotros</a>
+          <a href="#nuestros-servicios">Servicios</a>
+          <a href="#contacto">Contacto</a>
         </nav>
       </div>
     </header>
@@ -31,14 +38,16 @@
     <section id="sobre-nosotros">
       <div class="container">
         <div class="img-container"></div>
-        <h2>Sobre Nosotros</h2>
-        <p>
-          Empresa desarrollista de Villa Mercedes, provincia de San Luis,
-          contamos con amplia trayectoria en obras civiles y residenciales en la
-          provincia. Brindamos servicios profesionales de ingenieria,
-          administracion y diseño de proyectos, construcción civil y residencial
-          y sistema llave en mano
-        </p>
+        <div class="texto">
+          <h2>Sobre <span class="color-acento">Nosotros</span></h2>
+          <p>
+            Empresa desarrollista de Villa Mercedes, provincia de San Luis,
+            contamos con amplia trayectoria en obras civiles y residenciales en
+            la provincia. Brindamos servicios profesionales de ingenieria,
+            administracion y diseño de proyectos, construcción civil y
+            residencial y sistema llave en mano
+          </p>
+        </div>
       </div>
     </section>
 
@@ -47,58 +56,85 @@
     <section id="nuestros-servicios">
       <div class="container">
         <h2>Nuestros Servicios</h2>
-        <div class="carta">
-          <h3>Obra Residencial</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ex
-            cum architecto expedita veritatis atque provident totam voluptate
-            soluta, ratione omnis quidem laboriosam iure minima quo est quas
-            aspernatur nisi.
-          </p>
-          <a href="https://bit.ly/servingvm" class="ov-btn-slide-top">COTIZA AHORA</a>
-        </div>
-        <div class="carta">
-          <h3>Obra Civil</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ex
-            cum architecto expedita veritatis atque provident totam voluptate
-            soluta, ratione omnis quidem laboriosam iure minima quo est quas
-            aspernatur nisi.
-          </p>
-          <a href="https://bit.ly/servingvm" class="ov-btn-slide-top">COTIZA AHORA</a>
-        </div>
-        <div class="carta">
-          <h3>Maquinaria</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ex
-            cum architecto expedita veritatis atque provident totam voluptate
-            soluta, ratione omnis quidem laboriosam iure minima quo est quas
-            aspernatur nisi.
-          </p>
-          <a href="https://bit.ly/servingvm" class="ov-btn-slide-top">COTIZA AHORA</a>
+        <div class="programas">
+          <div class="carta">
+            <h3>Obra Residencial</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ex
+              cum architecto expedita veritatis atque provident totam voluptate
+              soluta, ratione omnis quidem laboriosam iure minima quo est quas
+              aspernatur nisi.
+            </p>
+            <a href="https://bit.ly/servingvm" class="ov-btn-slide-top"
+              >COTIZA AHORA</a
+            >
+          </div>
+          <div class="carta">
+            <h3>Obra Civil</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ex
+              cum architecto expedita veritatis atque provident totam voluptate
+              soluta, ratione omnis quidem laboriosam iure minima quo est quas
+              aspernatur nisi.
+            </p>
+            <a href="https://bit.ly/servingvm" class="ov-btn-slide-top"
+              >COTIZA AHORA</a
+            >
+          </div>
+          <div class="carta">
+            <h3>Maquinaria</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ex
+              cum architecto expedita veritatis atque provident totam voluptate
+              soluta, ratione omnis quidem laboriosam iure minima quo est quas
+              aspernatur nisi.
+            </p>
+            <a href="https://bit.ly/servingvm" class="ov-btn-slide-top"
+              >COTIZA AHORA</a
+            >
+          </div>
         </div>
       </div>
     </section>
 
     <!-- CONTACTO SECTION -->
     <section id="contacto">
-      <div class="container">
-        <h2>Contactanos</h2>
-        <div class="iconos-contacto">
-          <i class="bx bx-phone"></i>
-          <i class="bx bxl-gmail"></i>
-          <i class="bx bxl-instagram"></i>
-          <i class="bx bxl-facebook-circle"></i>
+      <div class="container-contact">
+        <div class="box-info">
+          <h2>CONTÁCTATE CON NOSOTROS</h2>
+          <div class="data">
+            <p><i class="fa-solid fa-phone"></i>2657 - 605597</p>
+            <p>
+              <i class="fa-solid fa-envelope"></i
+              >serviciosdeingenieria.vm@gmail.com
+            </p>
+            <p>
+              <i class="fa-solid fa-location-dot"></i>Villa Mercedes, San Luis
+            </p>
+          </div>
+          <div class="links">
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          </div>
         </div>
-        <div class="formulario">
-          <form class="form">
-            <input type="text" name="nombre" placeholder="Nombre y Apellido" />
-            <input type="email" name="email" placeholder="Email" />
-            <input type="tel" name="tel" placeholder="Telefono" />
-            <textarea placeholder="Mensaje"></textarea>
-            <input class="ov-btn-slide-top" type="submit" value="Enviar" />
-          </form>
-        </div>
+        <form>
+          <div class="input-box">
+            <input type="text" placeholder="Nombre y Apellido" required />
+            <i class="fa-solid fa-user"></i>
+          </div>
+          <div class="input-box">
+            <input type="email" required placeholder="Email" />
+            <i class="fa-solid fa-envelope"></i>
+          </div>
+          <div class="input-box">
+            <input type="text" placeholder="Asunto" />
+            <i class="fa-solid fa-pen-to-square"></i>
+          </div>
+          <div class="input-box">
+            <textarea placeholder="Escribe tu mensaje..."></textarea>
+          </div>
+          <button type="submit">Enviar</button>
+        </form>
       </div>
     </section>
 
@@ -106,18 +142,7 @@
 
     <footer>
       <div class="container">
-        <img src="./assets/logo.png" alt="logo empresa" />
-        <div class="map">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53124.0769574956!2d-65.50489278784865!3d-33.6764656872188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95d16a8988796ca7%3A0x178c644094662e35!2sVilla%20Mercedes%2C%20San%20Luis!5e0!3m2!1ses-419!2sar!4v1720565097401!5m2!1ses-419!2sar"
-            width="400"
-            height="350"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
+        <p>&copy; Servicios de Ingenieria Villa Mercedes</p>
       </div>
     </footer>
   </body>
